--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -9,14 +9,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version-file: '.nvmrc'
-      - run: npm install
-      - run: npm run build
       - uses: garygrossgarten/github-action-scp@release
         with:
-          local: build
+          local: .
           remote: dev
           rmRemote: true
           host: ${{ secrets.HOST }}
