--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "portfolio",
 	"version": "0.0.1",
 	"private": true,
+	"type": "module",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
@@ -35,6 +36,5 @@
 	"dependencies": {
 		"@s0rt/3d-viewer": "^7.0.2",
 		"@s0rt/wave-monster-collapse": "^4.0.6"
-	},
-	"type": "module"
+	}
 }
