--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
 		"vite": "^4.1.4"
 	},
 	"dependencies": {
-		"@s0rt/3d-viewer": "^8.0.0",
+		"@s0rt/3d-viewer": "8.1.0",
 		"@s0rt/wave-monster-collapse": "^4.2.0"
 	}
 }
