fix: Use eslint-plugin-svelte

--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
 		"@typescript-eslint/parser": "^6.3.0",
 		"autoprefixer": "^10.4.14",
 		"eslint": "^8.46.0",
+		"eslint-plugin-svelte": "^2.32.4",
 		"eslint-config-prettier": "^9.0.0",
-		"eslint-plugin-svelte3": "^4.0.0",
 		"lodash.throttle": "^4.1.1",
 		"postcss": "^8.4.27",
 		"prettier": "^3.0.1",
