--- a/package.json
+++ b/package.json
@@ -14,21 +14,21 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/kit": "^1.22.4",
+		"@sveltejs/kit": "^1.22.6",
 		"@types/lodash.throttle": "^4.1.7",
 		"@typescript-eslint/eslint-plugin": "^6.3.0",
 		"@typescript-eslint/parser": "^6.3.0",
-		"autoprefixer": "^10.4.14",
-		"eslint": "^8.46.0",
-		"eslint-plugin-svelte": "^2.32.4",
+		"autoprefixer": "^10.4.15",
+		"eslint": "^8.47.0",
 		"eslint-config-prettier": "^9.0.0",
+		"eslint-plugin-svelte": "^2.32.4",
 		"lodash.throttle": "^4.1.1",
 		"postcss": "^8.4.27",
 		"prettier": "^3.0.1",
 		"prettier-plugin-svelte": "^3.0.3",
-		"prettier-plugin-tailwindcss": "^0.4.1",
-		"svelte": "^4.1.2",
-		"svelte-check": "^3.4.6",
+		"prettier-plugin-tailwindcss": "^0.5.2",
+		"svelte": "^4.2.0",
+		"svelte-check": "^3.5.0",
 		"svelte-preprocess": "^5.0.4",
 		"tailwindcss": "^3.3.3",
 		"tslib": "^2.6.1",
@@ -36,7 +36,10 @@
 		"vite": "^4.4.9"
 	},
 	"dependencies": {
-		"@s0rt/3d-viewer": "8.2.2",
-		"@s0rt/wave-monster-collapse": "^4.2.4"
+		"@s0rt/3d-viewer": "8.2.5",
+		"@s0rt/wave-monster-collapse": "^4.2.7",
+		"earth": "https://app.pierrelespingal.xyz/earth/v2.0.10/package/earth-2.0.10.tgz",
+		"chess": "https://app.pierrelespingal.xyz/chess/v2.2.2/package/chess-2.2.2.tgz",
+		"@types/three": "^0.155.0"
 	}
 }
