--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
 		"allowUmdGlobalAccess": false,
 		// "baseUrl": "",
 		"module": "esnext",
-		"moduleResolution": "node",
+		"moduleResolution": "bundler",
 		"noResolve": false,
 		"resolveJsonModule": true,
 		"newLine": "lf",
@@ -29,7 +29,7 @@
 		"sourceMap": true,
 		"allowJs": false,
 		"checkJs": false,
-		"allowSyntheticDefaultImports": false,
+		"allowSyntheticDefaultImports": true,
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
 		"isolatedModules": true,
