--- a/.prettierrc
+++ b/.prettierrc
@@ -1,23 +1,8 @@
 {
-	"printWidth": 120,
-	"tabWidth": 2,
-	"useTabs": false,
-	"semi": true,
-	"singleQuote": true,
-	"trailingComma": "none",
-	"singleAttributePerLine": true,
-	"plugins": [
-		"prettier-plugin-svelte"
-	],
-	"pluginSearchDirs": [
-		"."
-	],
-	"overrides": [
-		{
-			"files": "*.svelte",
-			"options": {
-				"parser": "svelte"
-			}
-		}
-	]
+  "plugins": [
+    "prettier-plugin-svelte",
+    "prettier-plugin-organize-imports",
+    "prettier-plugin-tailwindcss"
+  ],
+  "overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
 }
