--- a/package.json
+++ b/package.json
@@ -1,45 +1,44 @@
 {
-	"name": "portfolio",
-	"version": "0.0.1",
-	"private": true,
-	"type": "module",
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write ."
-	},
-	"devDependencies": {
-		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/kit": "^1.22.6",
-		"@types/lodash.throttle": "^4.1.7",
-		"@typescript-eslint/eslint-plugin": "^6.3.0",
-		"@typescript-eslint/parser": "^6.3.0",
-		"autoprefixer": "^10.4.15",
-		"eslint": "^8.47.0",
-		"eslint-config-prettier": "^9.0.0",
-		"eslint-plugin-svelte": "^2.32.4",
-		"lodash.throttle": "^4.1.1",
-		"postcss": "^8.4.27",
-		"prettier": "^3.0.1",
-		"prettier-plugin-svelte": "^3.0.3",
-		"prettier-plugin-tailwindcss": "^0.5.2",
-		"svelte": "^4.2.0",
-		"svelte-check": "^3.5.0",
-		"svelte-preprocess": "^5.0.4",
-		"tailwindcss": "^3.3.3",
-		"tslib": "^2.6.1",
-		"typescript": "^5.1.6",
-		"vite": "^4.4.9"
-	},
-	"dependencies": {
-		"@s0rt/3d-viewer": "8.2.5",
-		"@s0rt/wave-monster-collapse": "^4.2.7",
-		"earth": "https://app.pierrelespingal.xyz/earth/v2.0.10/package/earth-2.0.10.tgz",
-		"chess": "https://app.pierrelespingal.xyz/chess/v2.2.2/package/chess-2.2.2.tgz",
-		"@types/three": "^0.155.0"
-	}
+  "name": "portfolio",
+  "version": "0.0.1",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "lint": "prettier --check . && eslint .",
+    "format": "prettier --write ."
+  },
+  "devDependencies": {
+    "@sveltejs/adapter-auto": "next",
+    "@sveltejs/kit": "^1.27.4",
+    "@types/lodash.throttle": "^4.1.9",
+    "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "@typescript-eslint/parser": "^6.10.0",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.53.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-svelte": "^2.35.0",
+    "lodash.throttle": "^4.1.1",
+    "postcss": "^8.4.31",
+    "prettier": "^3.0.3",
+    "prettier-plugin-organize-imports": "^3.2.3",
+    "prettier-plugin-svelte": "^3.1.0",
+    "prettier-plugin-tailwindcss": "^0.5.7",
+    "svelte": "^4.2.3",
+    "svelte-check": "^3.6.0",
+    "svelte-eslint-parser": "^0.33.1",
+    "tailwindcss": "^3.3.5",
+    "tslib": "^2.6.2",
+    "typescript": "^5.2.2",
+    "vite": "^4.5.0"
+  },
+  "dependencies": {
+    "@s0rt/3d-viewer": "8.2.5",
+    "@s0rt/wave-monster-collapse": "^4.2.7",
+    "chess": "https://app.pierrelespingal.xyz/chess/v2.2.2/package/chess-2.2.2.tgz",
+    "earth": "https://app.pierrelespingal.xyz/earth/v2.0.10/package/earth-2.0.10.tgz"
+  }
 }
