--- a/package.json
+++ b/package.json
@@ -1,47 +1,47 @@
 {
-  "name": "portfolio",
-  "version": "0.0.1",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "dev": "vite dev",
-    "build": "vite build",
-    "preview": "vite preview",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "lint": "prettier --check . && eslint .",
-    "format": "prettier --write ."
-  },
-  "devDependencies": {
-    "@sveltejs/adapter-auto": "3.3.1",
-    "@sveltejs/kit": "^2.8.3",
-    "@sveltejs/vite-plugin-svelte": "^4.0.2",
-    "@tailwindcss/typography": "^0.5.15",
-    "@types/lodash.throttle": "^4.1.9",
-    "@typescript-eslint/eslint-plugin": "^8.15.0",
-    "@typescript-eslint/parser": "^8.15.0",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.15.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-svelte": "^2.46.0",
-    "lodash.throttle": "^4.1.1",
-    "postcss": "^8.4.49",
-    "prettier": "^3.3.3",
-    "prettier-plugin-organize-imports": "^4.1.0",
-    "prettier-plugin-svelte": "^3.3.2",
-    "prettier-plugin-tailwindcss": "^0.6.9",
-    "svelte": "^5.2.7",
-    "svelte-check": "^4.1.0",
-    "svelte-eslint-parser": "^0.43.0",
-    "tailwindcss": "^3.4.15",
-    "tslib": "^2.8.1",
-    "typescript": "^5.7.2",
-    "vite": "^5.4.11"
-  },
-  "dependencies": {
-    "@s0rt/3d-viewer": "9.2.2",
-    "@s0rt/wave-monster-collapse": "^4.2.7",
-    "chess": "https://app.pierrelespingal.xyz/chess/v3.0.0/package/chess-3.0.0.tgz",
-    "earth": "https://app.pierrelespingal.xyz/earth/v3.0.0/package/earth-3.0.0.tgz",
-    "lucide-svelte": "^0.460.1"
-  }
+	"name": "portfolio",
+	"version": "0.0.1",
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"lint": "prettier --check . && eslint .",
+		"format": "prettier --write ."
+	},
+	"devDependencies": {
+		"@sveltejs/adapter-auto": "4.0.0",
+		"@sveltejs/kit": "^2.17.1",
+		"@sveltejs/vite-plugin-svelte": "^5.0.3",
+		"@tailwindcss/vite": "^4.0.6",
+		"@tailwindcss/typography": "^0.5.16",
+		"@types/lodash.throttle": "^4.1.9",
+		"@typescript-eslint/eslint-plugin": "^8.24.0",
+		"@typescript-eslint/parser": "^8.24.0",
+		"autoprefixer": "^10.4.20",
+		"eslint": "^9.20.1",
+		"eslint-config-prettier": "^10.0.1",
+		"eslint-plugin-svelte": "^2.46.1",
+		"lodash.throttle": "^4.1.1",
+		"prettier": "^3.5.1",
+		"prettier-plugin-organize-imports": "^4.1.0",
+		"prettier-plugin-svelte": "^3.3.3",
+		"prettier-plugin-tailwindcss": "^0.6.11",
+		"svelte": "^5.20.0",
+		"svelte-check": "^4.1.4",
+		"svelte-eslint-parser": "^0.43.0",
+		"tailwindcss": "^4.0.6",
+		"tslib": "^2.8.1",
+		"typescript": "^5.7.3",
+		"vite": "^6.1.0"
+	},
+	"dependencies": {
+		"@s0rt/3d-viewer": "9.2.2",
+		"@s0rt/wave-monster-collapse": "^4.2.7",
+		"chess": "https://app.pierrelespingal.xyz/chess/v3.0.0/package/chess-3.0.0.tgz",
+		"earth": "https://app.pierrelespingal.xyz/earth/v3.0.0/package/earth-3.0.0.tgz",
+		"lucide-svelte": "^0.475.0"
+	}
 }
