--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@types/lodash.throttle": "^4.1.9",
 		"@typescript-eslint/eslint-plugin": "^8.24.0",
 		"@typescript-eslint/parser": "^8.24.0",
+		"clsx": "^2.1.1",
 		"autoprefixer": "^10.4.20",
 		"eslint": "^9.20.1",
 		"eslint-config-prettier": "^10.0.1",
@@ -33,6 +34,7 @@
 		"svelte-check": "^4.1.4",
 		"svelte-eslint-parser": "^0.43.0",
 		"tailwindcss": "^4.0.6",
+		"tailwind-merge": "^3.0.1",
 		"tslib": "^2.8.1",
 		"typescript": "^5.7.3",
 		"vite": "^6.1.0"
